--- a/showcase/showpad/package.json
+++ b/showcase/showpad/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href \"https://vslipchenko.github.io/showcase/showpad/app/\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
